# 1vmosuite-test

./: .gitignore  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  AGENTS.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  FFMPEG_CPU_TO_NVENC_REFERENCE.md  IDEAS_BACKLOG.md  ONBOARDING.md  README.md  RESULTS.md  URL_DOWNLOADER_SPEC.md  WINDOWS_QA_HANDOFF_FOR_SAAIM.md  WORKING_AGREEMENT.md  auto_render.py  bench.py  config_video_cutter.json  config_video_merge.json  config_video_merger.json  config_video_renderer.json  cutter.py  gpu_detect.py  help_dialog.py  merge.py  mixer.py  pyproject.toml  quality-rules.json  requirements.txt  settings_dialog.py  setup.bat  setup.ps1  updater.py
.claude/: settings.json
.claude/agents/: verifier.md
.claude/hooks/: block-dangerous.sh  check-changelog.sh  format-python.sh
.github/workflows/: ci.yml
assets/: Encoder.json  Encoder.txt  README AutoRender.md  README Cutter.md  README GPM.md  README Merge.md  README Mixer.md  Version AutoRender.json
benchmarks/: METHODOLOGY.md  README.md  README_BENCH_TOOL.md  vmaf_validation_v2.5.md
benchmarks/_vmaf_work/: clip1_motion_av1_vmaf.json  clip1_motion_h264_vmaf.json  clip1_motion_hevc_vmaf.json  clip2_face_av1_vmaf.json  clip2_face_h264_vmaf.json  clip2_face_hevc_vmaf.json  clip3_typical_av1_vmaf.json  clip3_typical_h264_vmaf.json  clip3_typical_hevc_vmaf.json  clip3_x3speed_av1_vmaf.json  clip3_x3speed_h264_vmaf.json  clip3_x3speed_hevc_vmaf.json  clip4_diverse_av1_vmaf.json  clip4_diverse_h264_vmaf.json  clip4_diverse_hevc_vmaf.json  results.json
core/: atomic_write.py  config.py  encoder_schema.py  ffmpeg_runner.py  file_picker.py  flow_layout.py  naming_utils.py  preset_loader.py  preset_translator.py  qt_compat.py  queue_models.py  queue_store.py  url_downloader.py  user_data.py  version_state.py  widgets.py
core/encoder_intel/: __init__.py  analyzer.py  fallback.py  models.py
core/optimization/: __init__.py  batch_analyzer.py  failure_classifier.py  quality_classifier.py  recommendation_models.py  recommender.py
core/orchestration/: __init__.py  diagnostic_bundle.py  queue_state.py  retry_policy.py  scheduler.py  sleep_inhibitor.py  system_monitor.py  task_logger.py
core/scoring/: __init__.py  capabilities.py  phash_runner.py  score_models.py  score_store.py  ssim_psnr_runner.py  vmaf_runner.py
docs/: CORRECTIONS.md  MACOS_BUILD.md  NVENC_PARAMETER_REFERENCE.md  PHASE_1_STOP_CONDITIONS.md  PHASE_2C_PLAN.md  PHASE_2_PORT_NOTES.md  PHASE_2_ROADMAP.md  PHASE_3_HANDOFF.md  PHASE_3_RC_CHECKLIST.md  PHASE_3_ROLLBACK.md  PHASE_4_READINESS_NOTES.md  PRESET_PHILOSOPHY.md  RELEASE_NOTES_PHASE_3.md  RESEARCH_SUMMARY.md  ROADMAP.md  SESSION_LOG.md  junaid-handoff-2026-05-05.md  stress-test-results-v2.5.3.md
docs/decisions/: ADR-0001-phase-2-methodology-reconciliation.md  ADR-0002-product-trajectory.md  ADR-0003-narrow-pytest-exceptions.md  ADR-0004-cross-platform-mac-support.md  ADR-0005-platformdirs-user-data.md  ADR-0006-preset-id-schema-v2.md  ADR-0007-gpu-pipeline.md  ADR-0008-vmaf-thresholds.md  ADR-0009-scoring-architecture.md  ADR-0010-render-optimization.md  ADR-0011-orchestration.md  ADR-0012-encoder-intelligence.md  ADR-0013-release-packaging.md  ADR-0014-phase-3-closure.md  ADR-0015-nvenc-codec-routing.md  ADR-0016-bundle-deno-js-runtime.md  ADR-0017-remove-update-channel.md  README.md
scripts/: adr_lint.py  check_adr_references.py  check_changelog.py  check_default_drift.py  check_repo_consistency.py
tests/: README.md
tests/regressions/: test_F001_partial_naming.py
tests/smoke/: test_atomic_write_retry.py  test_batch_analyzer.py  test_capabilities.py  test_check_adr_references.py  test_clone_preset_id.py  test_config_bak.py  test_diagnostic_bundle.py  test_encoder_intel.py  test_failure_classifier.py  test_gpu_detect.py  test_gpu_semaphore_cancel.py  test_join_render_thread_parking.py  test_load_encoder_options_failsoft.py  test_logging_encoding.py  test_logging_userdata.py  test_partial_path.py  test_pause_resume.py  test_phash_runner.py  test_preset_loader_json_id.py  test_preset_translator_routing.py  test_quality_classifier.py  test_queue_persist_warning.py  (+17 more)
tools/: check_encoder_schema.py  check_preset_ids.py  check_user_data.py  generate_encoder_json.py  run_all_smoke.py  test_check_changelog.py  test_encoder_json_determinism.py  test_id_migration.py  test_integration_smoke.py  test_user_save.py
(+2 files in other folders)
